fixed doctype in graph-canvas element

--- a/web/dijkstra/dijkstra.html
+++ b/web/dijkstra/dijkstra.html
@@ -6,7 +6,7 @@
   	<meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="../dart-examples.css">
     <link rel="import" href="packages/polymer/polymer.html">
-    <link ref="import" href="../lib/graph-canvas/graph-canvas.html">
+    <link ref="import" href="graph-canvas/graph-canvas.html">
     <title>Dart examples - Dijkstra's shortest-path</title>
   </head>
 
