--- a/web/dijkstra/dijkstra.html
+++ b/web/dijkstra/dijkstra.html
@@ -23,8 +23,6 @@
     <div>
       <graph-canvas id="graph"></graph-canvas>
     </div>
-    <script type="application/dart">
-      export 'dijkstra.dart';
-    </script>
+    <script type="application/dart">export 'dijkstra.dart';</script>
   </body>
 </html>
