fixed wrong event handler

--- a/web/lib/graph-canvas/graph-canvas.html
+++ b/web/lib/graph-canvas/graph-canvas.html
@@ -7,7 +7,7 @@
         border: 1px solid #101010;
       }
     </style>
-    <canvas id="graph_canvas" onmousedown="{{mouseClick}}" onmouseup=""
+    <canvas id="graph_canvas" onmousedown="{{mouseDown}}" onmouseup="{{mouseUp}"
         onmousemove="{{mouseMove}}" width="800" height="600">
     </canvas>
   </template>
