First working graph-canvas component.

--- a/web/dijkstra/dijkstra.html
+++ b/web/dijkstra/dijkstra.html
@@ -22,6 +22,8 @@
     neccessary to create and manipulate graph structures.</p>
     <div>
       <graph-canvas id="graph"></graph-canvas>
+      <br>
+      <button id="clear">Clear canvas</button>
     </div>
     <script type="application/dart">export 'dijkstra.dart';</script>
   </body>
