--- a/web/lib/graph-canvas/graph-canvas.html
+++ b/web/lib/graph-canvas/graph-canvas.html
@@ -7,8 +7,8 @@
         border: 1px solid #101010;
       }
     </style>
-    <canvas id="graph_canvas" onmousedown="{{mouseDown}}" onmouseup="{{mouseUp}"
-        onmousemove="{{mouseMove}}" width="800" height="600">
+    <canvas id="graph"
+        width="800" height="600">
     </canvas>
   </template>
   <script type="application/dart" src="graph-canvas.dart">
