Improved graph-canvas UI interaction.

--- a/web/dijkstra/dijkstra.html
+++ b/web/dijkstra/dijkstra.html
@@ -22,7 +22,8 @@
     neccessary to create and manipulate graph structures.</p>
     <div>
       <graph-canvas id="graph"></graph-canvas>
-      <br>
+      <p>Use <strong>CTRL</strong>-key or <strong>ALT</strong>-key to create
+      graph edges.</p>
       <button id="clear">Clear canvas</button>
     </div>
     <script type="application/dart">export 'dijkstra.dart';</script>
