Added Dijkstra's algorithm to dijkstra.html

--- a/web/dijkstra/dijkstra.html
+++ b/web/dijkstra/dijkstra.html
@@ -24,7 +24,11 @@
       <graph-canvas id="graph"></graph-canvas>
       <p>Use <strong>CTRL</strong>-key or <strong>ALT</strong>-key to create
       graph edges.</p>
-      <button id="clear">Clear canvas</button>
+      <p><button id="new-directed">New directed</button> - Reset graph</p>
+      <p><button id="new-undirected">New undirected</button> - Reset graph</p>
+      <p><button id="find-path">Path</button> - Find shortest path in graph using
+      Dijkstra's algorithm</p>
+      <p><button id="reset-path">Remove path</button> - Reset path</p>
     </div>
     <script type="application/dart">export 'dijkstra.dart';</script>
   </body>
