Ready to deploy as JavaScript, fixed JS issues, style-up.

--- a/web/dijkstra/dijkstra.html
+++ b/web/dijkstra/dijkstra.html
@@ -12,6 +12,11 @@
 
   <body>
     <h1>Dijkstra's shortest-path</h1>
+
+    <p style="font-size: 0.7em">
+    <a href="../dart-examples.html">&lt;&lt; Back home</a>
+    </p>
+
     <p>This is a demo of <em>Dijksra's shortest-path</em> algoritm.
     It includes an example of polymer component, the <code>&lt;graph-canvas&gt;
     </code>, which allows to create graph structures using mouse, keyboard
