--- a/web/index.html
+++ b/web/index.html
@@ -137,7 +137,7 @@
       </dd>
     </dl>
 
-    <script type="application/dart" src="dart-examples.dart"></script>
+    <script type="application/dart" src="index.dart"></script>
     <script src="packages/browser/dart.js"></script>
   </body>
 </html>
